--- a/Frontend/Pages/Auth/Logout.razor
+++ b/Frontend/Pages/Auth/Logout.razor
@@ -12,6 +12,6 @@
     protected override async Task OnInitializedAsync()
     {
         await AppUser.Logout(localStorage);
-        NavigationManager.NavigateTo("/");
+        NavigationManager.NavigateTo("");
     }
 }
